Create LinkServiceTest getAllLinks... Create LinkMapper to map to linkdto and map to link.